Fix mobile overflow project info tooltip

--- a/src/css/tooltip.css
+++ b/src/css/tooltip.css
@@ -3,9 +3,9 @@
     display: inline-block;
   }
   
-  .tooltip .tooltiptext {
+  .tooltiptext {
     visibility: hidden;
-    width: 200px;
+    width: 20vw;
     background-color: black;
     color: #fff;
     text-align: center;
@@ -17,10 +17,16 @@
     position: absolute;
     z-index: 1;
     bottom: 100%;
-    left: 50%;
-    margin-left: -100px;
+    left: -10vw;
   }
   
-  .tooltip:hover .tooltiptext {
+  .icon:hover .tooltiptext {
     visibility: visible;
+  }
+
+  @media only screen and (max-width: 500px) {
+    .tooltiptext {
+      width: 30vw;
+      left: -20vw;
+    }
   }
